docs: Update `s13SortBy` to be hidden only when `s13ViewType` is "Map" instead of always shown.

--- a/notebooks/cis/_cis_readiness_index.qmd
+++ b/notebooks/cis/_cis_readiness_index.qmd
@@ -1084,8 +1084,8 @@ viewof s13ViewType = Inputs.radio(["Map", "Chart", "Table"], {
 })
 
 viewof s13SortBy = {
-  // Only show sort-by when Chart view is selected
-  if (s13ViewType !== "Chart") {
+  // Only show sort-by when Chart or Table view is selected
+  if (s13ViewType === "Map") {
     const input = Inputs.radio(["Short-term skill", "Long-term skill", "Difference (Δ)"], {
       label: _lang(cis.sortByLabel),
       value: "Short-term skill"
@@ -1098,6 +1098,7 @@ viewof s13SortBy = {
     value: "Short-term skill"
   });
 }
+
 ```
 
 
