feat: Add download button for observation capacity data and relocate the s3 download button definition.

--- a/notebooks/cis/_cis_readiness_index.qmd
+++ b/notebooks/cis/_cis_readiness_index.qmd
@@ -738,7 +738,30 @@ s11MapData = {
 ```
 
 ```{ojs}
+// Download button for Section 1.1
+downloadButton(
+  filteredData.map(d => {
+    const adminName = currentAdminLevel === 0 
+      ? d.admin0_name 
+      : currentAdminLevel === 1
+      ? `${d.admin1_name}, ${d.admin0_name}`
+      : `${d.admin2_name}, ${d.admin1_name}`;
+    return {
+      "Admin Name": adminName,
+      "Weather Station Density": d["weather-station_density"],
+      "Weather Station Class": classifyTercile(d["weather-station_density"], africaTerciles.weatherStation),
+      "Cloud Coverage": d["cloud-coverage_meanannual"],
+      "Cloud Coverage Class": classifyTercile(d["cloud-coverage_meanannual"], africaTerciles.cloudCover)
+    };
+  }),
+  "cis_observation_capacity",
+  _lang(cis.downloadLabel)
+)
+```
+
+```{ojs}
 // Section 1.1 Dynamic Insight
+
 s11Insight = {
   // If admin2 regions are highlighted, only use those for insights
   const insightData = highlightedAdmin2.length > 0 
