Remove unused OJS heading and summary variables, the `keyInsights` block, and a commented-out sidebar prototype.

--- a/notebooks/cis/cis_readiness.qmd
+++ b/notebooks/cis/cis_readiness.qmd
@@ -250,33 +250,13 @@ actually appearing in the notebook.
 <!-- Text and Language Translations -->
 
 ```{ojs}
-// This cell is to contain additional headings
-// (nbTitle is now defined earlier before the includes)
-// key_insights = _lang({en: "Key Insights", fr: "Résumé"})
-heading1 = _lang({ en: "Heading 1", fr: "Titre 1" });
-heading2 = _lang({ en: "Heading 2", fr: "Titre 2" });
-heading3 = _lang({ en: "Heading 3", fr: "Titre 3" });
-heading4 = _lang({ en: "Heading 4", fr: "Titre 4" });
-nbSummary = _lang({ en: "Summary", fr: "Résumé" });
+// Language-dependent strings used in Source code section
+// Note: key_insights is now handled per-section (s11Insight, s12Insight, etc.)
 appendix = _lang(general_translations.appendix);
 ```
 
 ```{ojs}
-mutable hoverCountry = "SSA" // This mutable is defined here and updated in _template_plot.qmd. It should only be defined once.
-
-keyInsights = {
-  let template = _lang({
-        en: `This is where some key insights should go, they will be dynamic based on the selections such as country (**:::country:::**) and crop type (**:::cropType:::**)`,
-        fr: `Ceci est là où les résumés clés devraient être, ils seront dynamiques en fonction des sélections comme pays (**:::country:::**) et type de culture (**:::cropType:::**)`
-  })
-
-  let fill_items = [
-      { name: "country", value: hoverCountry },
-      { name: "cropType", value: _lang({en: 'potatoes', fr: 'pomme de terre'}) }
-    ]
-  let keyText =  md`${Lang.reduceReplaceTemplateItems(template, fill_items)}`
-  return keyText
-}
+mutable hoverCountry = "SSA" // Used by _template_plot.qmd for map hover interactions
 ```
 
 
@@ -323,82 +303,4 @@ prettyLanguageView = {
     viewof masterLanguage
   );
 }
-```
 
-<!--
-
-# Prototypes for future use to hack a sidebar into notebooks:
-
-{.column-margin}
-
-```{ojs}
-htl.html`
-<style>
-.sticky-margin-div {
-  position: fixed;
-  }
-@media (max-width: 768px) {
-  .sticky-margin-div {
-    position: static;
-    }
-}
-</style>
-
-<div class = "sticky-margin-div">
-    <div>
-      ${Inputs.radio(languages, {
-        label: "Main language toggle",
-        format: (d) => d.key,
-        value: languages.find((x) => x.key === defaultLangKey),
-      })}
-    </div>
-  </div>`
-```
-
-:-::
-
--->
-
-<!-- Floating Sidebar: Self-contained HTML, CSS, and JS -->
-<!--
-<div id="floating-sidebar">
-
-</div>
-
-<style>
-  #floating-sidebar {
-    position: fixed;
-    top: 150px;           /* Distance from top of the page */
-    left: 20px;          /* Distance from left of the page */
-    width: 260px;        /* Sidebar width */
-    min-height: 400px;   /* Minimum height */
-    max-height: 80vh;    /* Max height relative to viewport */
-    background: #ffffff;
-    box-shadow: 0 4px 16px rgba(0,0,0,0.12);
-    border-radius: 8px;
-    padding: 20px;
-    overflow-y: auto;
-    z-index: 9999;
-    transition: box-shadow 0.2s;
-  }
-  #floating-sidebar:hover {
-    box-shadow: 0 8px 24px rgba(0,0,0,0.18);
-  }
-  /* Responsive: hide on small screens */
-  @media (max-width: 800px) {
-    #floating-sidebar {
-      display: none;
-    }
-  }
-</style>
-
-<script>
-  // Optional: Add any JS for interactivity here
-  // Example: Toggle sidebar visibility with a keyboard shortcut (Ctrl+B)
-  document.addEventListener('keydown', function(e) {
-    if (e.ctrlKey && e.key === 'b') {
-      const sidebar = document.getElementById('floating-sidebar');
-      sidebar.style.display = (sidebar.style.display === 'none') ? 'block' : 'none';
-    }
-  });
-</script> -->
