docs: add LinkedIn URL for Johnson Mwakazi and identify as lead developer.

--- a/notebooks/cis/cis_readiness.qmd
+++ b/notebooks/cis/cis_readiness.qmd
@@ -1,7 +1,8 @@
 ---
 pagetitle: "Identifying Climate Information Readiness"
 nb-authors:
-  - Johnson Mwakazi
+  - name: Johnson Mwakazi
+    url: https://www.linkedin.com/in/johnson-mwakazi/
   - Brayden Youngberg
   - Pete Stewart
   - Shalika Vyas
@@ -9,6 +10,7 @@ nb-authors:
 date-created: "2025-11-17"
 date-edited: today
 ---
+
 
 ```{ojs}
 // ============================================================================
@@ -221,7 +223,10 @@ methodsTitle = _lang(cis.methodsTitle)
 
 `{ojs} _lang(cis.acknowledgementsContent)`
 
+**Lead Developer:** [Johnson Mwakazi](https://www.linkedin.com/in/johnson-mwakazi/)
+
 ---
+
 
 ```{ojs}
 toc_bottom = atlasTOC({
